--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Dicee</title>
+    <link rel="stylesheet" href="styles.css">
+  
 
-<head>
-  <meta charset="utf-8">
-  <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
-</head>
+  </head>
+  <body>
 
-<body>
+    <div class="container">
+      <h1>Let's Rock & Roll</h1>
 
-  <h1 id="title">Drum 🥁 Kit</h1>
-  <div class="set">
-    <button class="w drum">w</button>
-    <button class="a drum">a</button>
-    <button class="s drum">s</button>
-    <button class="d drum">d</button>
-    <button class="j drum">j</button>
-    <button class="k drum">k</button>
-    <button class="l drum">l</button>
-  </div>
+      <div class="dice">
+        <p>Player 1</p>
+        <img class="img1" src="images/dice5.png">
+      </div>
 
+      <div class="dice">
+        <p>Player 2</p>
+        <img class="img2" src="images/dice6.png">
+      </div>
+      <button class="btn" onclick="myFunction()">PLAY</button>
 
- 
-  <script src="index.js"></script>
-</body>
-<footer>
-  Made By ✌️Aniket.
-</footer>
+    </div>
+   
+<script src="javascript.js"></script>
+  </body>
+
+  <footer>
+  🦾Aniaman.com🦾
+  </footer>
+  
 </html>
